dropshot/tests/fail/bad_channel14.stderr
error: endpoint `must_be_unpublished` has paths that contain a wildcard match, but is not marked 'unpublished = true'
  --> tests/fail/bad_channel14.rs:21:5
   |
21 | /     protocol = WEBSOCKETS,
22 | |     path = "/assets/{stuff:.*}",
   | |________________________________^
